2023-08-28T00:36:00Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5994147779 # 1856
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-28
* notice: last 14d: unq all: 17 27
* notice: prev accum: outdated-unq outdated-all / unq all: 1529 5009 / 1552 5039
* notice: next accum: outdated-unq outdated-all / unq all: 1531 5012 / 1552 5039
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-08-13] / []

2023-08-27T00:37:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5987844205 # 1853
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-27
* notice: last 14d: unq all: 18 30
* notice: prev accum: outdated-unq outdated-all / unq all: 1523 5001 / 1552 5039
* notice: next accum: outdated-unq outdated-all / unq all: 1529 5009 / 1552 5039
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-08-12] / []

2023-08-26T00:33:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5981686608 # 1850
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-26
* notice: last 14d: unq all: 21 38
* notice: prev accum: outdated-unq outdated-all / unq all: 1511 4984 / 1552 5039
* notice: next accum: outdated-unq outdated-all / unq all: 1523 5001 / 1552 5039
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-08-11] / []

2023-08-25T08:09:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5973498354 # 1848