@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-28T00:36:00Z",
-  "count_outdated" : 5012,
-  "uniques_outdated" : 1531,
-  "count" : 5039,
-  "uniques" : 1552,
+  "timestamp" : "2023-08-29T00:35:38Z",
+  "count_outdated" : 5019,
+  "uniques_outdated" : 1536,
+  "count" : 5040,
+  "uniques" : 1553,
   "clones" : [
-    {
-      "timestamp": "2023-08-14T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 5, 7 ],
-      "count_decinc": [ 0, 7 ],
-      "uniques": 5,
-      "uniques_minmax": [ 4, 5 ],
-      "uniques_decinc": [ 0, 5 ]
-    },
     {
       "timestamp": "2023-08-15T00:00:00Z",
       "count": 10,
@@ -61,6 +52,15 @@
     },
     {
       "timestamp": "2023-08-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-28T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
