@@ -1,12 +1,7 @@
 {
-  "count": 27,
-  "uniques": 17,
+  "count": 21,
+  "uniques": 14,
   "clones": [
-    {
-      "timestamp": "2023-08-14T00:00:00Z",
-      "count": 7,
-      "uniques": 5
-    },
     {
       "timestamp": "2023-08-15T00:00:00Z",
       "count": 10,
@@ -34,6 +29,11 @@
     },
     {
       "timestamp": "2023-08-25T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-28T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
